--- a/src/assets/css/stylus/mixins.styl
+++ b/src/assets/css/stylus/mixins.styl
@@ -20,3 +20,10 @@ iconStyle(arg)
   display inline-block
   background url(arg) no-repeat center
   background-size contain
+
+modalPosition(pos=absolute, t=0, l=0, w=100%, h=100%)
+  position pos
+  top t
+  left l
+  width w
+  height h
