--- a/src/assets/css/stylus/btn.styl
+++ b/src/assets/css/stylus/btn.styl
@@ -4,7 +4,7 @@
   line-height 30px
   text-align center
   background #FF6600
-  color #ffffff
+  color #ffffff !important
   border none
   cursor pointer
 
